# citation

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml.template  make_migrations.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  tasks.py
.agent/: README.md
.agent/checkpoints/: README.md
.agent/handoffs/: CURRENT_STATUS.md  HANDOFF_TEMPLATE.md  README.md  django-5.2-python-3.12-upgrade-plan.md
.agent/working-memory/: README.md
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
citation/: admin.py  apps.py  caching.py  dedupe.py  export_data.py  fields.py  forms.py  globals.py  merger.py  migrate.py  models.py  ping_urls.py  serializers.py  signals.py  urls.py  util.py  views.py
citation/bibtex/: common.py
citation/crossref/: common.py
citation/graphviz/: data.py  globals.py  viz_views_helper.py
citation/merger/: __init__.py  experimental.py
citation/migrations/: 0001_initial.py  0002_add_message_field_to_auditlog.py  0003_auto_20160915_1915.py  0004_move_flagged_status_to_flagged_field.py  0005_add_id_fields.py  0006_add_author_correspondence.py  0007_update_publication_status.py  0008_add_reviewed_status.py  0009_make_external_ids_nonempty.py  0011_note_publication.py  (+29 more)
docker/: .env
docs/: Makefile
tests/: common.py  settings.py  test_auditlog.py  test_data_clean.py  test_export_data.py  test_merge.py  test_merge_experimental.py  test_pipeline.py  test_serializers.py  test_views.py  tests.py  urls.py
(+27 files in other folders)
